[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Player/CutoutAnimation.tscn" type="PackedScene" id=2]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )
_jumptime = 0.25
_jumpspeed = 800

[node name="Actiontimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CutoutAnimation" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.25, 0.25 )
[connection signal="timeout" from="Actiontimer" to="." method="_on_Actiontimer_timeout"]
[connection signal="duck_over" from="CutoutAnimation" to="." method="_on_CutoutAnimation_duck_over"]
[connection signal="hit_something" from="CutoutAnimation" to="." method="_on_CutoutAnimation_hit_something"]
